@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-24T08:19:17Z",
+  "timestamp" : "2022-08-25T01:43:14Z",
   "count_outdated" : 489,
   "uniques_outdated" : 282,
-  "count" : 501,
+  "count" : 502,
   "uniques" : 291,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-08-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
